# kafka-python

./: admin.py  avro_consumer.py  avro_producer.py  consumer.py  docker-compose-single-broker.yml  json_producer.py  producer.py  pyproject.toml  schema.avsc  schema.json  schema_registry_avro_client.py  schema_registry_client.py
