[project]
name = "kafka-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Saideep Uikey"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka (>=2.11.0,<3.0.0)",
    "jsonschema (>=4.25.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "authlib (>=1.6.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
